예제 재등록

--- a/CSS/css/style1.css
+++ b/CSS/css/style1.css
@@ -1,6 +1,7 @@
-h1{
+
+h1 {
     border: 2px solid red;
     padding: 10px;
     background-color: yellowgreen;
-    color: blueviolet;
+    color: darkslateblue;
 }
